--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,8 @@ form[action$="destroy"] button {
 #root {
   display: flex;
   height: 100%;
-  width: 100%;
+  width: auto;
+  min-width: 0;
 }
 
 .ps-sidebar-container {
