--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
   :root {
     --color-text-base: #f8f8f8;
     --color-text-muted: #a3a3a3;
+    --color-text-opp: #141b2d;
     --color-text-green: #3da58a;
     --color-text-blue: #6870fa;
     --color-text-red: #db4f4a;
@@ -47,11 +48,13 @@
 
     --color-background: #141b2d;
     --color-background-accent: #1f2a40;
+    --color-background-opp: #e9e9e9;
   }
 
   .theme-light {
     --color-text-base: #040509;
     --color-text-muted: #858585;
+    --color-text-opp: #fcfcfc;
     --color-text-green: #3da58a;
     --color-text-blue: #6870fa;
     --color-text-red: #db4f4a;
@@ -69,6 +72,8 @@
 
     --color-background: #fcfcfc;
     --color-background-accent: #e9e9e9;
+    --color-background-opp: #1f2a40;
+
   }
 }
 
